Welcome, login, y no se que mas cosas

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,6 @@
 @import 'tailwindcss';
+@import './pages/login.css';
+@import './pages/welcome.css';
 
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
